Adjusted position of numbers of games by data graph; fixed URL weirdness when clicking around stats page too much

--- a/slipdotpy/app/static/css/style.css
+++ b/slipdotpy/app/static/css/style.css
@@ -1647,3 +1647,13 @@ span.filter.filterAgainst {
   background-color: yellow;
   background-color: rgba(255,255,0,0.5);
 }
+
+span#statsPlayerHeader {
+  color           : rgb(200,200,255);
+  font-weight     : bold;
+  cursor          : pointer;
+}
+
+tr.clickable:hover {
+  background-color: rgba(0,192,255,0.3);
+}
